Tester etcd over https lokalt også

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -102,6 +102,10 @@
     command: "{{ install_dir }}/bin/etcdctl ls /nais/network/config"
     environment:
       - ETCDCTL_API: 2
+      - ETCDCTL_CERT_FILE: /etc/ssl/etcd/etcd.pem
+      - ETCDCTL_KEY_FILE: /etc/ssl/etcd/etcd-key.pem
+      - ETCDCTL_CA_FILE: /etc/ssl/etcd/ca.pem
+      - ETCDCTL_ENDPOINT: https://127.0.0.1:2379
     register: flannelconfig
     ignore_errors: yes
     changed_when: false
@@ -110,6 +114,10 @@
     shell: '"{{ install_dir }}"/bin/etcdctl set /nais/network/config  "{ \"Network\": \"{{ pod_network_cidr }}\", \"SubnetLen\": 23, \"Backend\": { \"Type\": \"vxlan\" }}"'
     environment:
       - ETCDCTL_API: 2
+      - ETCDCTL_CERT_FILE: /etc/ssl/etcd/etcd.pem
+      - ETCDCTL_KEY_FILE: /etc/ssl/etcd/etcd-key.pem
+      - ETCDCTL_CA_FILE: /etc/ssl/etcd/ca.pem
+      - ETCDCTL_ENDPOINT: https://127.0.0.1:2379
     when: flannelconfig.rc != 0
 
 # Configure kubernetes Master node
