Lagd bigip tags, gjør det lettere å kjøre ansible lokalt

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -32,6 +32,8 @@
       host: "{{ ansible_default_ipv4['address'] }}"
       validate_certs: no
       port: 443
+    tags:
+      - bigip
 
 - hosts: all
   user: "{{ remote_user }}"
