--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -3,7 +3,9 @@
   user: "{{ remote_user }}"
   pre_tasks:
   - name: Copy python interpreter to server
-    local_action: command scp -o StrictHostKeyChecking=no files/pypy-5.1.0-linux64.tar.bz2 {{ remote_user }}@{{ inventory_hostname }}:/home/{{ remote_user }}/
+    copy:
+      src: files/pypy-5.1.0-linux64.tar.bz2
+      dest: /home/{{ remote_user }}/
     tags:
     - skip_ansible_lint
   roles:
