Make sure nais-developers can CRUD nais.io.Application objects

--- a/files/roles/clusterroles.yaml
+++ b/files/roles/clusterroles.yaml
@@ -8,6 +8,19 @@ metadata:
   name: nais-developer
 rules:
 - apiGroups:
+  - "nais.io"
+  resources:
+  - applications
+  verbs:
+  - create
+  - delete
+  - deletecollection
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - ""
   resources:
   - configmaps
