Etcd coreos var ikke brukt alle steder

--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -91,7 +91,7 @@
   roles:
   - fetch_existing_certificates
 
-- hosts: etcd
+- hosts: etcd:etcd_coreos
   user: "{{ remote_user }}"
   tasks:
   - name: Fetch Etcd-specific certificates (if exists)
