--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -1,13 +1,13 @@
-- hosts: coreos
+- hosts: all
   gather_facts: False
   user: "{{ remote_user }}"
+  roles:
+    - coreos_bootstrap
   pre_tasks:
   - name: Copy python interpreter to server
     local_action: command scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null {{ lookup('env', 'SSH_OPTS') }} files/pypy-5.1.0-linux64.tar.bz2 {{ remote_user }}@{{ inventory_hostname }}:/home/{{ remote_user }}/
     tags:
     - skip_ansible_lint
-  roles:
-    - coreos_bootstrap
 
 - hosts: localhost
   tasks:
