--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -474,8 +474,7 @@
         name: kubelet.service
         state: restarted
 
-# Common setup for all nodes
-- hosts: masters:workers
+- hosts: masters
   user: "{{ remote_user }}"
   become: yes
 
@@ -511,6 +510,20 @@
     loop: "{{ node_labels|default([]) }}"
     changed_when: false
 
+- hosts: workers
+  user: "{{ remote_user }}"
+  tasks:
+    - name: Setup node taints
+      command: "{{ install_dir }}/bin/kubectl --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf  --overwrite=true taint nodes {{ inventory_hostname }} {{ item }}"
+      loop: "{{ node_taints|default([]) }}"
+      delegate_to: "{{ groups.masters|random }}"
+      changed_when: false
+
+    - name: Setup node labels
+      command: "{{ install_dir }}/bin/kubectl --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf --overwrite=true label nodes {{ inventory_hostname }} {{ item }}"
+      loop: "{{ node_labels|default([]) }}"
+      delegate_to: "{{ groups.masters|random }}"
+      changed_when: false
 
 - hosts: masters
   user: "{{ remote_user }}"
