--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -6,7 +6,8 @@
     - coreos_bootstrap
   pre_tasks:
   - name: Copy python interpreter to server
-    local_action: command scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null {{ lookup('env', 'SSH_OPTS') }} files/pypy-5.1.0-linux64.tar.bz2 {{ remote_user }}@{{ inventory_hostname }}:/home/{{ remote_user }}/
+    delegate_to: localhost
+    command: "scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null {{ lookup('env', 'SSH_OPTS') }} files/pypy-5.1.0-linux64.tar.bz2 {{ remote_user }}@{{ inventory_hostname }}:/home/{{ remote_user }}/"
     tags:
     - skip_ansible_lint
 
@@ -141,17 +142,17 @@
 
   - name: Download flannel binaries # using curl as get_url gave protocol error (most likely caused by internal webproxy)
     environment: "{{ proxy_env }}"
-    shell: curl -L --insecure https://github.com/coreos/flannel/releases/download/v{{flannel_version}}/flannel-v{{flannel_version}}-linux-amd64.tar.gz | tar xzf - -C /tmp flanneld mk-docker-opts.sh && \
-           mv /tmp/flanneld {{ install_dir }}/bin/flanneld-{{flannel_version}} && \
+    shell: curl -L --insecure https://github.com/coreos/flannel/releases/download/v{{ flannel_version }}/flannel-v{{ flannel_version }}-linux-amd64.tar.gz | tar xzf - -C /tmp flanneld mk-docker-opts.sh && \
+           mv /tmp/flanneld {{ install_dir }}/bin/flanneld-{{ flannel_version }} && \
            mv /tmp/mk-docker-opts.sh {{ install_dir }}/libexec
     args:
-      creates: "{{ install_dir }}/bin/flanneld-{{flannel_version}}"
+      creates: "{{ install_dir }}/bin/flanneld-{{ flannel_version }}"
     tags:
       - skip_ansible_lint
 
   - name: Symlink flannel
     file:
-      src: "{{ install_dir }}/bin/flanneld-{{flannel_version}}"
+      src: "{{ install_dir }}/bin/flanneld-{{ flannel_version }}"
       dest: "{{ install_dir }}/bin/flanneld"
       state: link
 
@@ -240,7 +241,7 @@
            mv /tmp/kubernetes/node/bin/kubectl {{ install_dir }}/bin/kubectl-{{ k8s_version }} && \
            mv /tmp/kubernetes/node/bin/kubelet {{ install_dir }}/bin/kubelet-{{ k8s_version }}
     args:
-      creates: "{{ install_dir }}/bin/kubelet-{{k8s_version}}"
+      creates: "{{ install_dir }}/bin/kubelet-{{ k8s_version }}"
     tags:
       - dev
       - skip_ansible_lint
@@ -261,7 +262,7 @@
 
   - name: Make kubernetes node binaries executable
     file:
-      path: "{{ install_dir }}/bin/{{ item }}-{{ k8s_version }}"
+      path: "{{ install_dir }}/bin/{{ item }}-{{ k8s_version }}"
       mode: 0755
     loop:
       - kubectl
