Nytt navn, og linting ved PR

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
 script:
   - ansible-lint setup-playbook.yaml
   - ansible-lint test-playbook.yaml
+  - ansible-lint bigip-playbook.yaml
 #  - ansible-lint teardown-playbook.yaml
 branches:
   only:
