--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -8,8 +8,7 @@
   - name: Copy python interpreter to server
     delegate_to: localhost
     command: "scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null {{ lookup('env', 'SSH_OPTS') }} files/pypy-5.1.0-linux64.tar.bz2 {{ remote_user }}@{{ inventory_hostname }}:/home/{{ remote_user }}/"
-    tags:
-    - skip_ansible_lint
+    changed_when: false
 
 - hosts: localhost
   tasks:
@@ -147,8 +146,6 @@
            mv /tmp/mk-docker-opts.sh {{ install_dir }}/libexec
     args:
       creates: "{{ install_dir }}/bin/flanneld-{{ flannel_version }}"
-    tags:
-      - skip_ansible_lint
 
   - name: Symlink flannel
     file:
@@ -242,9 +239,6 @@
            mv /tmp/kubernetes/node/bin/kubelet {{ install_dir }}/bin/kubelet-{{ k8s_version }}
     args:
       creates: "{{ install_dir }}/bin/kubelet-{{ k8s_version }}"
-    tags:
-      - dev
-      - skip_ansible_lint
 
   - name: Symlink kubernetes node binaries
     file:
@@ -601,8 +595,6 @@
            mv /tmp/linux-amd64/helm {{ install_dir }}/bin/helm-{{ helm_version }}
     args:
       creates: "{{ install_dir }}/bin/helm-{{ helm_version }}"
-    tags:
-      - skip_ansible_lint
 
   - name: Symlink helm
     file:
