--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -116,6 +116,8 @@
       - front-proxy-client-key.pem
       - kube-apiserver-server-key.pem
       - kube-apiserver-server.pem
+      - kube-proxy.pem
+      - kube-proxy-key.pem
       - sa.key
       - sa.pub
       - traefik.pem
@@ -411,8 +413,8 @@
       src: "target/pki/{{ item }}"
       dest: /etc/kubernetes/pki/ # to ensure idempotency
     loop:
-      - admin.pem
-      - admin-key.pem
+      - kube-proxy.pem
+      - kube-proxy-key.pem
     notify:
       - restart_kubelet
       - restart_kubeproxy
@@ -472,7 +474,6 @@
 - hosts: masters
   user: "{{ remote_user }}"
   become: yes
-
   tasks:
   - name: Delete cluster-admin.conf
     file:
@@ -508,10 +509,24 @@
 - hosts: workers
   user: "{{ remote_user }}"
   tasks:
+    # Denne blir fjernet etter nytt oppsett har blitt kjørt på alle noder
     - name: Delete cluster-admin.conf
       file:
         path: /etc/kubernetes/kubeconfigs/cluster-admin.conf
         state: absent
+      changed_when: false
+
+    - name: Delete kube-proxy.conf
+      file:
+        path: /etc/kubernetes/kubeconfigs/kube-proxy.conf
+        state: absent
+      changed_when: false
+
+    - name: Generate kube-proxy kubeconfig
+      shell: "{{ install_dir }}/bin/kubectl config set-cluster {{ cluster_name }} --server=https://{{ groups.masters|random }}:6443 --certificate-authority=/etc/kubernetes/pki/ca.pem --embed-certs=true --kubeconfig=/etc/kubernetes/kubeconfigs/kube-proxy.conf &&
+             {{ install_dir }}/bin/kubectl config set-credentials {{ cluster_name }}-kube-proxy --client-certificate=/etc/kubernetes/pki/kube-proxy.pem --client-key=/etc/kubernetes/pki/kube-proxy-key.pem --embed-certs --kubeconfig=/etc/kubernetes/kubeconfigs/kube-proxy.conf &&
+             {{ install_dir }}/bin/kubectl config set-context {{ cluster_name }} --cluster={{ cluster_name }} --user={{ cluster_name }}-kube-proxy --kubeconfig=/etc/kubernetes/kubeconfigs/kube-proxy.conf &&
+             {{ install_dir }}/bin/kubectl config use-context {{ cluster_name }} --kubeconfig=/etc/kubernetes/kubeconfigs/kube-proxy.conf"
       changed_when: false
 
     - name: Setup node taints
