--- a/roles/create_certificates/tasks/main.yml
+++ b/roles/create_certificates/tasks/main.yml
@@ -21,7 +21,7 @@
 - name: Generate kubelet-csrs
   template:
     src: "{{ role_path }}/templates/kubelet-csr.json.j2"
-    dest: target/pki/kubelet/{{ item }}-csr.json
+    dest: "target/pki/kubelet/{{ item.split('.')[0] }}-csr.json"
   loop: "{{ groups.all|flatten(levels=1) }}"
 
 - name: Copy ca-config.json
@@ -48,7 +48,7 @@
     creates: target/pki/kube-proxy.pem
 
 - name: Creating kubelet certificates
-  shell: "bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=client target/pki/kubelet/{{ item }}-csr.json | bin/cfssljson -bare target/pki/kubelet/{{ item.split('.')[0] }}"
+  shell: "bin/cfssl gencert -ca=target/pki/ca.pem -ca-key=target/pki/ca-key.pem -config=target/pki/ca-config.json -profile=client target/pki/kubelet/{{ item.split('.')[0] }}-csr.json | bin/cfssljson -bare target/pki/kubelet/{{ item.split('.')[0] }}"
   args:
     creates: "target/pki/kubelet/{{ item.split('.')[0] }}.pem"
   loop: "{{ groups.all|flatten(levels=1) }}"
