--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -498,8 +498,6 @@
 - hosts: masters
   user: "{{ remote_user }}"
   become: yes
-  roles:
-    - generate_kubeconfig
   tasks:
   - name: Delete cluster-admin.conf
     file:
@@ -522,29 +520,12 @@
       timeout: 240
     changed_when: false
 
-  - name: Setup node taints
-    command: "{{ install_dir }}/bin/kubectl --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf  --overwrite=true taint nodes {{ inventory_hostname }} {{ item }}"
-    loop: "{{ node_taints|default([]) }}"
-    changed_when: false
-
-  - name: Setup node labels
-    command: "{{ install_dir }}/bin/kubectl --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf --overwrite=true label nodes {{ inventory_hostname }} {{ item }}"
-    loop: "{{ node_labels|default([]) }}"
-    changed_when: false
-
-- hosts: workers
+- hosts: masters:workers
   user: "{{ remote_user }}"
   become: yes
   roles:
     - generate_kubeconfig
   tasks:
-    # Denne blir fjernet etter nytt oppsett har blitt kjørt på alle noder
-    - name: Delete cluster-admin.conf
-      file:
-        path: /etc/kubernetes/kubeconfigs/cluster-admin.conf
-        state: absent
-      changed_when: false
-
     - name: Setup node taints
       command: "{{ install_dir }}/bin/kubectl --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf  --overwrite=true taint nodes {{ inventory_hostname }} {{ item }}"
       loop: "{{ node_taints|default([]) }}"
@@ -555,6 +536,13 @@
       command: "{{ install_dir }}/bin/kubectl --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf --overwrite=true label nodes {{ inventory_hostname }} {{ item }}"
       loop: "{{ node_labels|default([]) }}"
       delegate_to: "{{ groups.masters|random }}"
+      changed_when: false
+
+    # Denne blir fjernet etter nytt oppsett har blitt kjørt på alle noder
+    - name: Delete cluster-admin.conf
+      file:
+        path: /etc/kubernetes/kubeconfigs/cluster-admin.conf
+        state: absent
       changed_when: false
 
 - hosts: masters
