--- a/setup-playbook.yaml
+++ b/setup-playbook.yaml
@@ -524,7 +524,7 @@
   user: "{{ remote_user }}"
   become: yes
   roles:
-    - generate_kubeconfig
+    - generate_kubeconfigs
   tasks:
     - name: Setup node taints
       command: "{{ install_dir }}/bin/kubectl --kubeconfig=/etc/kubernetes/kubeconfigs/cluster-admin.conf  --overwrite=true taint nodes {{ inventory_hostname }} {{ item }}"
